--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<script type="text/javascript">alert('Hello World');</script>
+<h1>にわとりちきんのホームページ</h1>
+<h1>まだ何もないよ</h1>
 </body>
 </html>
