--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>にわとりちきんのホームページ</h1>
-<h2>まだ何もないよ</h2>
-</body>
-</html>
+<!DOCTYPE HTML>
+<HTML>
+	<h1>にわとりちきんのホームページ</h1>
+	<p>にわとりちきんのホームページです。</p>
+	<a href="scrapbook/scrapbook.html">メモだったりブログもどきだったりなにか</a>
+	<br>
+	<a href="about.html">私について</a>
+	<p>リンクフリー</p>
+</HTML>
