--- a/about.html
+++ b/about.html
@@ -4,5 +4,5 @@
 	<p>ウンコ製造機です。</p>
 	<p>身内用のminecraft鯖立てたり、Pythonとかやってます。一応Arduinoも書けます。</p>
 	<p>これでも中学生のつもりらしいですね。頭おかしいです。</p>
-	<a href="niwatori-chicken.github.io">戻る</a>
+	<a href="index.html">戻る</a>
 </HTML>
