--- a/about.html
+++ b/about.html
@@ -4,5 +4,6 @@
 	<p>ウンコ製造機です。</p>
 	<p>身内用のminecraft鯖立てたり、Pythonとかやってます。一応Arduinoも書けます。</p>
 	<p>これでも中学生のつもりらしいですね。頭おかしいです。</p>
+	<p>おいせれろんデェ#3961、見てるんだろうな？</p>
 	<a href="/index.html">戻る</a>
 </HTML>
