--- a/scrapbook/scrapbook.html
+++ b/scrapbook/scrapbook.html
@@ -4,5 +4,7 @@
 	<h2>メモとかそんな何かです。ほぼ自分用</h2>
 	<a href="20220407.html">クソみたいなホムペ作った(2022/4/7)</a>
 	<br>
+	<a href="20220823.html">お久しぶりです(2022/8/23)</a>
+	<br>
 	<a href="/index.html">戻る</a>
 </HTML>
