--- a/scrapbook/scrapbook.html
+++ b/scrapbook/scrapbook.html
@@ -6,5 +6,7 @@
 	<br>
 	<a href="20220823.html">お久しぶりです(2022/8/23)</a>
 	<br>
+	<a href="20230503.html">生存報告(2023/5/03)</a>
+	<br>
 	<a href="/index.html">戻る</a>
 </HTML>
