--- a/scrapbook/20230503.html
+++ b/scrapbook/20230503.html
@@ -1,2 +1,6 @@
-生きてます。
-近々更新予定
+<HTML>
+	<h1>生存報告</h1>
+	<p>生きてます。<br>近々更新予定。</p>
+	<p>2023年5月03日</p>
+	<a href="scrapbook.html">「スクラップブック」のトップへ</a>
+</HTML>
