--- a/en/scrapbooks.html
+++ b/en/scrapbooks.html
@@ -46,23 +46,23 @@
         <hr>
         <h2>2024</h2>
             <h3>July</h3>
-                <li><a href="scrapbooks/july/nn.html">サイトを移転しました。</a></li>
+                <li><a href="scrapbooks/july/nn.html">The site has changed.</a></li>
             <br>
 
         <hr>
         <h2>2023</h2>
             <h3>May</h3>
-                <li><a href="scrapbooks/may/05.html">生存報告</a></li>
+                <li><a href="scrapbooks/may/05.html">I'm living</a></li>
             <br>
 
         <hr>
         <h2>2022</h2>
             <h3>August</h3>
-                <li><a href="scrapbooks/august/23.html">お久しぶりです</a></li>
+                <li><a href="scrapbooks/august/23.html">Long time no see there</a></li>
             <br>
 
             <h3>April</h3>
-                <li><a href="scrapbooks/april/07.html">クソみたいなホムペ作った</a></li>
+                <li><a href="scrapbooks/april/07.html">I made a f***in website</a></li>
             <br>
     </main>
 
