--- a/en/index.html
+++ b/en/index.html
@@ -39,17 +39,15 @@
 
     <main>
         <h2 class="center">Top page</h2>
-        <h3 class="center">Welcome to niwatori-chicken's website. Whimsical Sunday Engineering.</h3>
-        <p class="center">You're visitor No.<img src="http://square.umin.ac.jp/cgi-bin/npc.cgi?L=niwatori-chicken.index-test.html">.</p>
-        <p>I do Software/Hardware that I can.</p>
-        
+        <h3 class="center">Welcome to niwatori-chicken's website.</h3>
+
         <p>This page under construction, sometimes you might be encountered a broken link or missing style.</p>
         <p>If you encountered them, please tell me via email in <a href="about.html">About</a> page.</p>
         
         <p>(The site doesn't support dynamic contents yet.)</p>
         <h2 class="center">Updates</h2>
         <li>
-            2024. 7. 10. Main page has done.
+            2024. 7. 10. Main page has done.(but I deployed in December)
         </li>
     </main>
 
