--- a/en/index.html
+++ b/en/index.html
@@ -41,7 +41,7 @@
         <h2 class="center">Top page</h2>
         <h3 class="center">Welcome to niwatori-chicken's website.</h3>
 
-        <p>This page under construction, sometimes you might be encountered a broken link or missing style.</p>
+        <p>This page under construction, sometimes you might be encounter a broken link or missing style.</p>
         <p>If you encountered them, please tell me via email in <a href="about.html">About</a> page.</p>
         
         <p>(The site doesn't support dynamic contents yet.)</p>
