--- a/crafts/latexer_discord_bot.html
+++ b/crafts/latexer_discord_bot.html
@@ -46,7 +46,7 @@
         <img src="../imgs/latexer_bot_demo.png" alt="The bot rendering LaTeX" height=250 width=639>
 
         <p>Discord上で数式を書くのが面倒くさかったので、Math modeのLaTeXを自動で描画して画像として出力するbotを作りました。</p>
-        <p>リポジトリはこちら：<a>https://github.com/niwatori-chicken/latexer-discord-bot</a></p>
+        <p>リポジトリはこちら：<a href="https://github.com/niwatori-chicken/latexer-discord-bot"></p>
         <p>このbotはApache License 2.0に基づいてライセンスされます。</p>
 
         <br>
@@ -57,7 +57,6 @@
         <p>また、動かすDiscord botのトークンを取得しておいてください。</p>
         <br>
         <p>適当なディレクトリを用意して(git cloneする場合は勝手にディレクトリができるので必要ありません。)、main.pyをダウンロードします。<br>トークンの格納用に、同じディレクトリに".env"ファイルを作成して、以下のようにします。</p>
-        <p>.env</p>
         <pre class="no-pre-space"><code>
         TOKEN=トークン        
         </code></pre>
