--- a/crafts/latexer_discord_bot.html
+++ b/crafts/latexer_discord_bot.html
@@ -46,7 +46,7 @@
         <img src="../imgs/latexer_bot_demo.png" alt="The bot rendering LaTeX" height=250 width=639>
 
         <p>Discord上で数式を書くのが面倒くさかったので、Math modeのLaTeXを自動で描画して画像として出力するbotを作りました。</p>
-        <p>リポジトリはこちら：<a href="https://github.com/niwatori-chicken/latexer-discord-bot"></p>
+        <p>リポジトリは<a href="https://github.com/niwatori-chicken/latexer-discord-bot">こちら<a></p>
         <p>このbotはApache License 2.0に基づいてライセンスされます。</p>
 
         <br>
