--- a/crafts/latexer_discord_bot.html
+++ b/crafts/latexer_discord_bot.html
@@ -50,17 +50,23 @@
         <p>このbotはApache License 2.0に基づいてライセンスされます。</p>
 
         <br>
+
+        <h3>試してみる</h3>
+        <p><a href="https://discord.com/oauth2/authorize?client_id=1302599709596061796">こちら</a>からbotを入れることで使えますが、認証していないのでサーバーの上限数が100コだったり、作者がホスティングしているbotであることから、可用性や安全性は保証できません。<br>可用性や安全性を求める場合は、「ローカル環境で動かす」セクションを参考にして、ホストすることを推奨します。</p>
+
+        <br>
         
-        <h3>動かし方</h3>
+        <h3>ローカル環境で動かす</h3>
         <hr>
         <p>Pythonと、Pythonライブラリのmatplotlib, discord.py, python-dotenvをインストールしておいてください。</p>
-        <p>また、動かすDiscord botのトークンを取得しておいてください。</p>
+        <p>また、動かすDiscord botのトークンを取得しておいてください。<a href="https://discord.com/developers/applications">(Discord Developer Portal)</a></p>
         <br>
-        <p>適当なディレクトリを用意して(git cloneする場合は勝手にディレクトリができるので必要ありません。)、main.pyをダウンロードします。<br>トークンの格納用に、同じディレクトリに".env"ファイルを作成して、以下のようにします。</p>
+        <p>適当なディレクトリを用意して(git cloneする場合は勝手にディレクトリができるので必要ありません。)、そこにmain.pyをダウンロードします。cdしてディレクトリを移動しておきます。<br>トークンの格納用に、同じディレクトリに".env"ファイルを作成して、以下のようにトークンを記述します。</p>
         <pre class="no-pre-space"><code>
         TOKEN=トークン        
         </code></pre>
-        <p>Pythonで実行します。</p>
+
+        <p>"python3 main.py"で実行できます。必要に応じてデーモン化などをしてください。<br>(デーモン化や、Discordアプリケーションの作成などに関してはここで紹介すると趣旨から外れるので説明はしません。)<br>(他の方が別のサイトにわかりやすく書いてくれていますので、そちらを参考にしてください。)</p>
         <br>
         
 
