--- a/crafts/latexer_discord_bot.html
+++ b/crafts/latexer_discord_bot.html
@@ -46,13 +46,13 @@
         <img src="../imgs/latexer_bot_demo.png" alt="The bot rendering LaTeX" height=250 width=639>
 
         <p>Discord上で数式を書くのが面倒くさかったので、Math modeのLaTeXを自動で描画して画像として出力するbotを作りました。</p>
-        <p>リポジトリは<a href="https://github.com/niwatori-chicken/latexer-discord-bot">こちら<a></p>
+        <p><a href="https://github.com/niwatori-chicken/latexer-discord-bot">リポジトリはこちら。<a></p>
         <p>このbotはApache License 2.0に基づいてライセンスされます。</p>
 
         <br>
 
         <h3>試してみる</h3>
-        <p><a href="https://discord.com/oauth2/authorize?client_id=1302599709596061796">こちら</a>からbotを入れることで使えますが、認証していないのでサーバーの上限数が100コだったり、作者がホスティングしているbotであることから、可用性や安全性は保証できません。<br>可用性や安全性を求める場合は、「ローカル環境で動かす」セクションを参考にして、ホストすることを推奨します。</p>
+        <p><a href="https://discord.com/oauth2/authorize?client_id=1302599709596061796">ここからbotを入れる</a>ことで使えますが、認証していないのでサーバーの上限数が100コだったり、作者がホスティングしているbotであることから、可用性や安全性は保証できません。<br>可用性や安全性を求める場合は、「ローカル環境で動かす」セクションを参考にして、ホストすることを推奨します。</p>
 
         <br>
         
