--- a/special/feb_25_proN.html
+++ b/special/feb_25_proN.html
@@ -39,6 +39,7 @@
             padding-top: 50px;
             padding-bottom: 50px;
             border-radius: 10px;
+            color: #333;
         }
 
         .main_content p, .main_content h1, .main_content h2, .main_content h3, .main_content img {
